# zylith

./: .gitattributes  .gitignore  README.md  env.example  package-lock.json  package.json
asp_server/: Cargo.toml  Dockerfile  env.example
asp_server/src/: main.rs
circom_circuits/: lp.circom  lp_vk.json  package-lock.json  package.json  swap.circom  swap_vk.json  verification_key.json  withdraw.circom  withdraw_vk.json
circom_circuits/lp_verifier/: Scarb.toml
circom_circuits/lp_verifier/src/: groth16_verifier_constants.cairo
circom_circuits/lp_verifier/tests/: test_contract.cairo
circom_circuits/swap_verifier/: Scarb.toml
circom_circuits/swap_verifier/tests/: test_contract.cairo
circom_circuits/swap_verifier_final/: Scarb.toml
contracts/: Scarb.toml
contracts/core/: Scarb.toml
contracts/lp_verifier/: Scarb.toml
contracts/privacy/: Scarb.toml
contracts/swap_verifier/: Scarb.toml
frontend/: env.example  package-lock.json  package.json  snarkjs.d.ts
lp_verifier_v2/: Scarb.toml
lp_verifier_v2/src/: groth16_verifier.cairo  groth16_verifier_constants.cairo
lp_verifier_v2/tests/: test_contract.cairo
swap_verifier_new/: Scarb.toml
swap_verifier_new/src/: groth16_verifier.cairo  groth16_verifier_constants.cairo
swap_verifier_new/tests/: test_contract.cairo
swap_verifier_v2/: Scarb.toml
swap_verifier_v2/src/: groth16_verifier_constants.cairo
swap_verifier_v2/tests/: test_contract.cairo
swap_verifier_v3/: Scarb.toml
swap_verifier_v3/src/: groth16_verifier_constants.cairo
swap_verifier_v3/tests/: test_contract.cairo
(+41 files in other folders)
