[package]
name = "zylith-asp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
starknet = { version = "0.17.0" } # For interacting with Starknet
starknet-crypto = "0.8.1" # For hashing
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] } # For storing tree state
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1.0"
url = "2.5"
dotenvy = "0.15"
light-poseidon = "0.2.0"
ark-bn254 = "0.4.0"
ark-ff = "0.4.2"
num-bigint = "0.4"
hex = "0.4"
